sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/Recurring_Service__c.object-meta.xml
<CustomObject>
    <label>Recurring Service</label>
    <nameField>
        <displayFormat>RS-{00000000}</displayFormat>
        <label>Recurring Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>