sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Billing_Units__c.field-meta.xml
<CustomField>
    <fullName>Billing_Units__c</fullName>
    <label>Billing Units</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>