sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Consumption_Units__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Units__c</fullName>
    <inlineHelpText>Are the consumption units fixed or they vary</inlineHelpText>
    <label>Consumption Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed value</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>