sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Unit__c</fullName>
    <label>Cost Per Unit</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>