sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Dim_2__c.field-meta.xml
<CustomField>
    <fullName>Dim_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dim 2</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Services (Dim 2)</relationshipLabel>
    <relationshipName>Recurring_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>