sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Dim_3__c.field-meta.xml
<CustomField>
    <fullName>Dim_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dim 3</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Services (Dim 3)</relationshipLabel>
    <relationshipName>Recurring_Services2</relationshipName>
    <type>Lookup</type>
</CustomField>