sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Effective end date of this service</description>
    <inlineHelpText>Effective end date of this service</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>