sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/FLI_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>FLI_Gross_Cost__c</fullName>
    <formula>FLI_Net_Cost__c + VAT_Amount_FLI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLI Gross Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>