sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/FLI_percentage_value__c.field-meta.xml
<CustomField>
    <fullName>FLI_percentage_value__c</fullName>
    <inlineHelpText>The percentage value that Fresh Life is supposed to pay for the shared service</inlineHelpText>
    <label>FLI %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>