sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/FLI_SLK_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>FLI_SLK_Total_Price__c</fullName>
    <formula>FLI_Total_Price__c  +  SLK_Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLI &amp; SLK Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>