sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/FLI_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>FLI_Total_Price__c</fullName>
    <description>The total price for all Recurring Service Line Items for Fresh Life</description>
    <inlineHelpText>The total price for all Recurring Service Line Items for Fresh Life</inlineHelpText>
    <label>FLI Total Price</label>
    <summarizedField>Recurring_Service_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Recurring_Service_Line_Item__c.Company__c</field>
        <operation>equals</operation>
        <value>Fresh Life Initiative Limited</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Recurring_Service_Line_Item__c.PR_Created__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Recurring_Service_Line_Item__c.PO_Created__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Recurring_Service_Line_Item__c.Recurring_Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>