sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/FLI_Vendor_Contract__c.field-meta.xml
<CustomField>
    <fullName>FLI_Vendor_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLI Vendor Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Recurring Services (FLI Vendor Contract)</relationshipLabel>
    <relationshipName>Recurring_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>