sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/GLA__c.field-meta.xml
<CustomField>
    <fullName>GLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GLA</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Services (GLA)</relationshipLabel>
    <relationshipName>Recurring_Services3</relationshipName>
    <type>Lookup</type>
</CustomField>