sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Services (Grant)</relationshipLabel>
    <relationshipName>Recurring_Services4</relationshipName>
    <type>Lookup</type>
</CustomField>