sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Gross_Billing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gross_Billing_Cost__c</fullName>
    <formula>SLK_Gross_Cost__c  +  FLI_Gross_Cost__c</formula>
    <label>Gross Billing Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>