sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Maintenance_Department__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Department</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Services (Maintenance Department)</relationshipLabel>
    <relationshipName>Recurring_Services5</relationshipName>
    <type>Lookup</type>
</CustomField>