sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Maintenance_Department_TL__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Department_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Department TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recurring_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>