sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Purchase_Order_Item_SLK__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item_SLK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Purchase Order Item for Sanergy Limited</inlineHelpText>
    <label>Purchase Order Item (SLK)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Vendor on the PO Item doesn&#39;t match the Vendor on the Recurring Service</errorMessage>
        <filterItems>
            <field>Purchase_Order_Item__c.Vendor__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Vendor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Purchase_Order_Item__c.Company_Name__c</field>
            <operation>equals</operation>
            <value>Sanergy Limited</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Recurring Services</relationshipLabel>
    <relationshipName>Recurring_Services</relationshipName>
    <type>Lookup</type>
</CustomField>