sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Requesting_Department__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Department</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Recurring Services</relationshipLabel>
    <relationshipName>Recurring_Services</relationshipName>
    <type>Lookup</type>
</CustomField>