sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Recurring Services</relationshipLabel>
    <relationshipName>Recurring_Services</relationshipName>
    <type>Lookup</type>
</CustomField>