sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Pay</fullName>
            </value>
            <value>
                <fullName>Post Pay</fullName>
            </value>
            <value>
                <fullName>Pay Per Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>