sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Shared_service__c.field-meta.xml
<CustomField>
    <fullName>Shared_service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this service is shared by SLK &amp; FLI ,check this box</inlineHelpText>
    <label>Shared Service</label>
    <type>Checkbox</type>
</CustomField>