sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/SLK_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>SLK_Gross_Cost__c</fullName>
    <formula>SLK_Net_Cost__c  +  VAT_Amount_SLK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLK Gross Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>