sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/SLK_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>SLK_Net_Cost__c</fullName>
    <formula>(Billing_Units__c * (SLK_percentage_value__c/100) ) * Cost_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLK Net Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>