sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/SLK_percentage_value__c.field-meta.xml
<CustomField>
    <fullName>SLK_percentage_value__c</fullName>
    <inlineHelpText>The percentage value that Sanergy is supposed to pay for the shared service</inlineHelpText>
    <label>SLK %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>