sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/SLK_Vendor_Contract__c.field-meta.xml
<CustomField>
    <fullName>SLK_Vendor_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLK Vendor Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Recurring Services</relationshipLabel>
    <relationshipName>Recurring_Services</relationshipName>
    <type>Lookup</type>
</CustomField>