sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Effective start date of this service</description>
    <inlineHelpText>Effective start date of this service</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>