sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/VAT_Amount_SLK__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_SLK__c</fullName>
    <formula>(Billing_Units__c * (SLK_percentage_value__c/100) ) * (Cost_Per_Unit__c * VALUE(VAT_Percentage_SLK__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount SLK</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>