sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/VAT_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>VAT_Inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Price to which tax is yet to be added to arrive at the final cost.</inlineHelpText>
    <label>VAT Inclusive?</label>
    <type>Checkbox</type>
</CustomField>