sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/VAT_Inclusive_SLK__c.field-meta.xml
<CustomField>
    <fullName>VAT_Inclusive_SLK__c</fullName>
    <formula>Purchase_Order_Item_SLK__r.VAT_Inclusive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Inclusive?(SLK)</label>
    <type>Checkbox</type>
</CustomField>