sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/VAT_Percentage_SLK__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage_SLK__c</fullName>
    <formula>IF( ISPICKVAL( Purchase_Order_Item_SLK__r.VAT_Percentage__c , &#39;0&#39;) , &#39;0&#39;, 
 IF( ISPICKVAL( Purchase_Order_Item_SLK__r.VAT_Percentage__c , &#39;16&#39;) , &#39;16&#39;, NULL) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Percentage(SLK)</label>
    <type>Text</type>
</CustomField>