sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Vatable__c.field-meta.xml
<CustomField>
    <fullName>Vatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vatable?</label>
    <type>Checkbox</type>
</CustomField>