sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Vatable_FLI__c.field-meta.xml
<CustomField>
    <fullName>Vatable_FLI__c</fullName>
    <formula>Purchase_Order_Item_FLI__r.Vatable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vatable?(FLI)</label>
    <type>Checkbox</type>
</CustomField>