sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Vatable_SLK__c.field-meta.xml
<CustomField>
    <fullName>Vatable_SLK__c</fullName>
    <formula>Purchase_Order_Item_SLK__r.Vatable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vatable?(SLK)</label>
    <type>Checkbox</type>
</CustomField>