sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recurring Services</relationshipLabel>
    <relationshipName>Recurring_Services</relationshipName>
    <type>Lookup</type>
</CustomField>