sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/validationRules/CheckIfFLIPercentageValueIsEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIfFLIPercentageValueIsEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK(Purchase_Order_Item_FLI__c ) ) ,ISBLANK(FLI_percentage_value__c ) 
)</errorConditionFormula>
    <errorDisplayField>FLI_percentage_value__c</errorDisplayField>
    <errorMessage>Please provide the FLI percentage value</errorMessage>
</ValidationRule>