sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/validationRules/CheckIfSLKPercentageValueIsEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIfSLKPercentageValueIsEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK(Purchase_Order_Item_SLK__c )  ) ,ISBLANK(SLK_percentage_value__c )
)</errorConditionFormula>
    <errorDisplayField>SLK_percentage_value__c</errorDisplayField>
    <errorMessage>Please provide the SLK percentage value</errorMessage>
</ValidationRule>