sfSandBoxCode/force-app/main/default/objects/Recurring_Service__c/listViews/FLI_Directors_Recurring_Service.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Recurring_Service</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>